acrescentei meu github no footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
     </main>
     <footer>
-        <p>Site criado por <span class="negrito">Pablo Henrique</span> para <span class="negrito">Aprendizagem</span>.</p>
+        <p>Site criado por <a href="https://pablovieira08.github.io/html-css" target="_blank">Pablo Henrique</a> para <strong>Aprendizagem</strong>.</p>
     </footer>
 </body>
 </html>
